2002-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/script-column.cc (before_line_breaking): use stable sorting
	algorithm to preserve script ordering.
	(grob_script_priority_less): new function

	* lily/script-engraver.cc (process_music): 
	* lily/text-engraver.cc (process_acknowledged_grobs): 
	* lily/fingering-engraver.cc (make_script): don't use direction
	for script-priority.

	* scripts/ly2dvi.py (run_lilypond): don't exit if LilyPond fails,
	but try to assemble the files anyway.

	* input/regression/prefatory-empty-spacing.ly: new file.

	* lily/break-align-interface.cc (do_alignment): translate last
	break-align-group if it is invisible/empty.

	* scm/grob-description.scm (all-grob-descriptions): LeftEdge is
	not a BreakAlignGroup. Do not use
	Break_align_interface::alignment_callback


2002-08-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (LatexPaper.find_latex_dims): give more
	meaningful error if running latex fails 

	* Documentation/user/refman.itely (Tablatures): small
	corrections. Thanks to Karl Berry

2000-08-30  Heikki Junes <hjunes@cc.hut.fi>
        * make/lilypond.mandrake.spec.in: Mandrake adaptations from
        redhat spec and rpm-skeleton found in Mandrake's home page.

2002-08-29  Juergen Reuter  <reuter@ipd.uka.de>

	* input/test/ancient-font.ly, mf/parmesan-heads.mf,
	scm/output-lib.scm, lily/note-head.cc: bugfix: make neume note
	heads accessible
 

2002-08-29  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scm/music-functions.scm (unfold-repeats): Call new
	shift-duration-log correctly also for unfolded repeats.

2002-08-27  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* tex/titledefs.tex: Define \fetafont for use in titles.

	* scm/music-functions.scm (shift-duration-log), lily/parser.yy
	(Repeated_music): Handle dots correctly for \repeat tremolo.

2002-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/score.cc: remove paranoia code.

	* lily/parser.yy: don't include malloc.h
